--- a/System-Design/README.adoc
+++ b/System-Design/README.adoc
@@ -2,4 +2,7 @@
 
 link:https://github.com/fibanez6/System-Design-and-Coding-Interview[System Design and Coding Interview]
 
+* xref:Pattern_Desing.adoc[Pattern Desing]
+* xref:Principles_Design.adoc[Principles Design]
+* xref:RESful_Design.adoc[RESful Design]
 
